# FOMOSv1-Yellow

./: .gitignore  CFOMOSReadMe.md  CMakeLists.txt  Cargo.toml  FOMOS  FOMOS.c  FOMOSUI.c  FOMOSUI.sh  Makefile  README.md  calculator.c  compile.sh  homeScreenUI.c  index.html  installFOMOSRequirements.sh  installRequirements.sh  installRequirments.sh  main  main.c  main.js  openDeviceCare.sh  package-lock.json  package.json  runFOMOS.sh  script.js  settings  settings.c  settings.sh  setup.sh  setupFOMOS.sh  shutdown.c  startCFOMOS.sh  startFOMOS.sh  testUI  testUI.c  time.c  time.sh
.cargo/: config.toml
CFOMOS/: CFOMOSReadMe.md  CMakeLists.txt  FOMOSUI  FOMOSUI.c  FOMOSUI.css  calculator  calculator.c  compile.sh  credits.txt  darkTheme  darkTheme.c  deleteCompiledFiles.sh  index.html  installCFOMOSRequirements.sh  lightTheme  lightTheme.c  main.js  makeUsrFile  openDeviceCare.sh  openUsrFile  restart  script.js  setDarkTheme.py  setLightTheme.py  settings  settings.c  setupFOMOS.sh  shutdown  shutdown.c  startCFOMOS.sh  wifi.html
FMOE/: CMakeLists.txt  FMOE.c  Makefile  compile.sh  editFile.c  help.c  makeFile.c  openFile.c
apps/: Cargo.toml
css/: alerts.css  buttons.css  calculator.css  homeScreen.css  settings.css
htmlAlerts/: strtFOMOS.html
htmlUi/: calculator.html  homeScreen.html  index.html  settings.html
jsUi/: homeScreen.js  settings.js
kernel/: Cargo.toml
kernel/src/: fkmain.rs  lib.rs  ukmain.rs
osJavaScript/: deviceCare.js  exit.js  keyboard.js  power.js  settingsOs.js  update.js  wifi.js
osShellScripts/: connectWifi.sh  deviceCare.sh  (+6 more)
(+37 files in other folders)
