[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

[dependencies]
libnu = "0.1.2"
novusk_syscalls = { version = "0.1.0", features = ["novusk_uefi"] }
aarch64 = { git = "https://github.com/new-kernel/novusk/", tag = "v2.1.1", path = "arch/aarch64/", features = ["default_machine"] }
sys = { git = "https://github.com/new-kernel/novusk", tag = "v2.1.3", path = "kernel/sys/" }